--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,12 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -15,7 +21,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +29,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
